# Python-Mono

.github/: dependabot.yml
.github/workflows/: dependency-submission.yml
pip-project-1/: main.py  requirements.txt  vulnerable_app.py
pip-project-2/: main.py  requirements.txt
poetry-project-1/: main.py  pyproject.toml
poetry-project-2/: main.py  pyproject.toml
