[tool.poetry]
name = "poetry-project-1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
flask = "^3.0.0"
pandas = "^2.1.4"
sqlalchemy = "^2.0.23"
pyyaml = "^6.0.1"
click = "^8.1.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
