[tool.poetry]
name = "poetry-project-2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.0"
matplotlib = "^3.8.2"
scikit-learn = "^1.3.2"
jupyter = "^1.0.0"
seaborn = "^0.13.0"
scipy = "^1.11.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
